# frontend

./: add a goal and existing goals  add a goal and existing goals.html  add budget and existing budget.html  addGoal.html  app.js  assets.html  dashboard.html  dashboard.js  expense.html  financialdashboard.html  income.html  landingPage.html  liabilities.html  login.html  navigation.html  newbudget.html  package-lock.json  package.json  pyproject.toml  signin.html  signup.html  tailwind.config.js  trybudgets.html  trygoals.html
content/: add-a-goal-and-existing-goals.html  financialdashboard.html  goal setting.html  income.html  trygoals.html
src/: dashboard.html  landingPage.html  login.html  output.css  signup.html
src/content/: add budget and existing budget.html  add-a-goal-and-existing-goals.html  assets.html  expense.html  financialdashboard.html  goal setting.html  liabilities.html  trybudgets.html
