[project]
name = "finance-tracker"
version = "0.1.0"
description = "finance"
authors = [
    {name = "MelodyNdungu", email = "melodymuthoni4@gmail.com"},
]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
